--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
  build-and-deploy:
    runs-on: ubuntu-latest
    steps:
-   # checkout the repo
+   # checkout the repo now
    - name: 'Checkout GitHub Action'
      uses: actions/checkout@main
   
@@ -17,7 +17,7 @@ jobs:
    - name: 'Build and push image'
      uses: azure/docker-login@v1
      with:
-       login: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+       login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
        username: ${{ secrets.REGISTRY_USERNAME }}
        password: ${{ secrets.REGISTRY_PASSWORD }}
    - run: docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ secrets.REPOSITORY_NAME }}:${{ github.run_number }} && docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ secrets.REPOSITORY_NAME }}:${{ github.run_number }}
